# sovereign-rs

./: Cargo.toml  README.md  build.rs  docker-compose.yml  sovereign.yaml
containers/: Dockerfile.envoy  Dockerfile.sovereign  envoy.yaml
py/: source.py
src/: app.rs  config.rs  context.rs  envoy_types.rs  lib.rs  main.rs  proto.rs  sources.rs  templates.rs  types.rs
tools/: download-protos.py
xds_templates/1.25/: clusters.json.jinja2  clusters.yaml.jinja2  listeners.py  routes.py
