[package]
name = "sovereign-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Envoy JSON-REST XDS Control-Plane"
authors = ["Vasilios Syrakis <vsyrakis@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/cetanu/sovereign-rs"
keywords = ["xds", "control plane", "envoy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1.21", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
dashmap = "5.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

tonic = { version = "0.9" }
prost = "0.11"
prost-types = "0.11"

pyo3 = { version = "0.19" }

config = "0.13"

url = {version = "2.4", features = ["serde"]}
minijinja = {version="1.0", features = ["loader"]}
reqwest = {version="0.11", features = ["json"]}
xxhash-rust = {version="0.8.7", features=["xxh64"]}

rusoto_s3 = {version="0.48.0", optional=true}
rusoto_core = {version="0.48.0", optional=true}

anyhow = "*"

clap = { version = "4.1", features = ["derive", "env"] }

[features]
default = ["s3"]
s3 = ["rusoto_s3", "rusoto_core"]

[build-dependencies]
tonic-build = "0.8"
regex = "1.5"
zip = "0.6"
rayon = "1.5"
fs_extra = "1.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
